Добавил практическое задание

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header>
       <ul type="circle">
         <li>Главная</li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Навыки</li>
+        <li>Хобби</li>
+        <li>Социальные сети</li>
+        <li>Опыт работы</li>
       </ul>
     </header>
 
