--- a/index.html
+++ b/index.html
@@ -2,73 +2,57 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Портфолио web-разработчика">
-    <meta name="keywords" content="web-разработка, верстка, HTML, CSS">
+    <meta name="description" content="Портфолио web-разработчика" />
+    <meta name="keywords" content="web-разработка, верстка, HTML, CSS" />
     <title>Основы HTML. Текст и изображения</title>
   </head>
 
   <body>
-    <!-- Шапка сайта -->
-    <header>
-      <ul type="circle">
-        <li>Главная</li>
-        <li>Навыки</li>
-        <li>Хобби</li>
-        <li>Социальные сети</li>
-        <li>Опыт работы</li>
-      </ul>
-    </header>
+    <header></header>
 
-    <!-- Основная часть сайта -->
     <main>
-      <h1>Чжун Ли</h1>
-      <hr color="brown" size="4">
-      <!-- Вставили изображение -->
-      <img
-        height="150px"
-        src="images/zhongli.webp"
-        alt="Чжун Ли"
-      />
-      <p>Чжун Ли — взрослый и спокойный молодой человек работающий консультантом в Ритуальном Бюро Ваншэн. <br>Он многое знает об Архонтах и программировании и web-разработке.</p>
-      <hr color="brown" size="4">
-
-      <h3>Навыки</h3>
-      <ol>
-        <li>Профи <strong>HTML</strong> и <strong>CSS</strong></li>
-        <li>Бог <em>JavaScript</em></li>
-        <li>Повелитель Python</li>
+      <!-- ? Упорядоченный список -->
+      <ol start="3" title="Упорядоченный список">
+        <li>Выучить HTML/CSS</li>
+        <li>Выучить JavaScript</li>
+        <li>Заработать много денег</li>
+        <li>Уехать отдыхать на море</li>
       </ol>
 
-      <hr>
+      <!-- ? Список терминов -->
+      <dl>
+        <dt>Первый термин</dt>
+        <dd>Описание первого термина</dd>
+        <dt>Второй термин</dt>
+        <dd>Описание второго термина</dd>
+      </dl>
 
-      <h3>Хобби</h3>
-      <ul>
-        <li>Создавать и Разрушать миры</li>
-        <li>Путешествия</li>
-        <li>Блоггер</li>
-        <li>Литературы и Игры</li>
-      </ul>
-      <hr>
+      <!-- ? Цитирование -->
+      <blockquote>
+        "Веселая цитата"
+        <cite>(с) Рома</cite>
+      </blockquote>
 
-      <h3>Социальные сети</h3>
-      <ul type="square">
-        <li>Telegram</li>
-        <li>Vk</li>
-        <li>TikTok</li>
-        <li>YouTube</li>
-      </ul>
-      <hr>
+      <!-- Тег <pre> Для сохранения форматирования -->
+      <pre>
+      /\_/\
+     ( o.o )
+      = ^ =
+      </pre>
 
-      <h3>Опыт работы</h3>
-      <p><em>Таблица в процессе наполнения</em></p>
-      <hr>
+      <!-- 
+      ? Мнемоники — это особые строки, которые начинаются с амперсанда (&) и заканчиваются точкой с запятой (;).
+      Например, знак меньше на страницу можно вставить мнемоникой &lt; (less than), 
+      а знак больше мнемоникой &gt; (greater than):
 
+      Полный список тут -> https://dev.w3.org/html5/html-author/charref
+    -->
+
+      <!-- Для обозначения фрагментов кода есть специальный тег, который так и называется <code>. 
+    -->
+      <code> &lt;ul&gt; &lt;/ul&gt; </code>
     </main>
 
-    <!-- Подвал сайта -->
-    <footer>
-      <p>Портфолио актуально на 2023 год</p>
-      <p>Разработчик IT-Квантум (с)</p>
-    </footer>
+    <footer></footer>
   </body>
 </html>
