--- a/index.html
+++ b/index.html
@@ -4,16 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="description" content="Портфолио web-разработчика" />
     <meta name="keywords" content="web-разработка, верстка, HTML, CSS" />
-    <title>Основы HTML. Текст и изображения</title>
+    <title>Основы HTML. Гиперссылки</title>
   </head>
 
   <body>
-    <header></header>
 
+    <!-- Шапка сайта -->
+    <header>
+      <!-- Добавим список для будущего меню сайта -->
+      <ul>
+        <li>
+          <a href="index.html">Главная</a>
+        </li>
+        <li>
+          <a href="pages/about.html">Об авторе</a>
+        </li>
+        <li>
+          <a href="pages/contacts.html">Контакты</a>
+        </li>
+      </ul>
+    </header>
+
+    <!-- Главная часть сайта -->
     <main>
-
+      ...
     </main>
 
+    <!-- Подвал сайта -->
     <footer></footer>
+
   </body>
 </html>
