--- a/pages/about.html
+++ b/pages/about.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Об авторе</title>
-</head>
-<body>
-  
-</body>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Об авторе</title>
+  </head>
+  <body>
+    <h1>Иванов Иван Иванович</h1>
+
+    <!-- Путь до изображения  -->
+    <img src="../images/zhongli.webp" alt="Здесь могла быть ваша реклама" />
+
+    <br /><br />
+
+    <!-- Абсолютный путь до внешнего ресурса: YouTube канала -->
+    <a href="https://www.youtube.com/@codeandartmain">Мой YouTube канал</a>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus,
+      dolor. Impedit dolor illum delectus, maxime dicta officiis nobis corrupti
+      odit nisi saepe soluta incidunt, explicabo tempore exercitationem non
+      error quam?
+    </p>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero incidunt
+      quisquam aliquid tenetur inventore ipsum dicta aliquam repellat quos
+      voluptatum accusamus neque a enim nostrum quis, ut obcaecati velit.
+      Dolores.
+    </p>
+
+    <a href="../index.html">Вернуться на Главную</a>
+  </body>
 </html>
