--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -8,6 +8,7 @@
 <>
   <h1 id="contacts">Наши контакты</h1>
 
+  <!-- Ссылка на YouTube канали при клике на изображение -->
   <a href="https://www.youtube.com/@codeandartmain" target="_blank">
     <img src="../images/zhongli.webp" alt="">
   </a>
