Добавил Задание для Занятия 3

--- a/index.html
+++ b/index.html
@@ -2,36 +2,76 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Портфолио web-разработчика" />
-    <meta name="keywords" content="web-разработка, верстка, HTML, CSS" />
-    <title>Основы HTML. Гиперссылки</title>
+    <meta name="description" content="Портфолио web-разработчика">
+    <meta name="keywords" content="web-разработка, верстка, HTML, CSS">
+    <title>Основы HTML. Текст и изображения</title>
   </head>
 
   <body>
-
     <!-- Шапка сайта -->
     <header>
-      <!-- Добавим список для будущего меню сайта -->
-      <ul>
-        <li>
-          <a href="index.html">Главная</a>
-        </li>
-        <li>
-          <a href="pages/about.html">Об авторе</a>
-        </li>
-        <li>
-          <a href="pages/contacts.html">Контакты</a>
-        </li>
+      <ul type="circle">
+        <li>Главная</li>
+        <li><a href="#skills">Навыки</a></li>
+        <li><a href="#hobby">Хобби</a></li>
+        <li><a href="#jobs">Опыт работы</a></li>
+        <li><a href="/pages/about.html">Об авторе</a></li>
+        <li><a href="/pages/contacts.html">Контакты</a></li>
       </ul>
     </header>
 
-    <!-- Главная часть сайта -->
+    <!-- Основная часть сайта -->
     <main>
-      ...
+      <h1 id="main">Чжун Ли</h1>
+      <hr color="brown" size="4">
+      <!-- Вставили изображение -->
+      <img
+        height="150px"
+        src="images/zhongli.webp"
+        alt="Чжун Ли"
+      />
+      <p>Чжун Ли — взрослый и спокойный молодой человек работающий консультантом в Ритуальном Бюро Ваншэн. <br>Он многое знает об Архонтах и программировании и web-разработке.</p>
+      <hr color="brown" size="4">
+
+      <h3 id="skills">Навыки</h3>
+      <ol>
+        <li>Профи <strong>HTML</strong> и <strong>CSS</strong></li>
+        <li>Бог <em>JavaScript</em></li>
+        <li>Повелитель Python</li>
+      </ol>
+
+      <hr>
+
+      <h3 id="hobby">Хобби</h3>
+      <ul>
+        <li>Создавать и Разрушать миры</li>
+        <li>Путешествия</li>
+        <li>Блоггер</li>
+        <li>Литературы и Игры</li>
+      </ul>
+      <hr>
+
+      <h3>Социальные сети</h3>
+      <ul type="square">
+        <li>Telegram</li>
+        <li>Vk</li>
+        <li>TikTok</li>
+        <li>YouTube</li>
+      </ul>
+      <hr>
+
+      <h3 id="jobs">Опыт работы</h3>
+      <p><em>Таблица в процессе наполнения</em></p>
+      <hr>
+
+      <a href="#main">Вернуться в начало страницы</a>
     </main>
 
     <!-- Подвал сайта -->
-    <footer></footer>
-
+    <footer>
+      <p>Портфолио актуально на 2023 год</p>
+      <p>Разработчик IT-Квантум (с)</p>
+      <a href="/pages/contacts.html">Контакты</a>
+    </footer>
   </body>
 </html>
