--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Контакты</title>
-</head>
-<>
-  <h1 id="contacts">Наши контакты</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Контакты</title>
+  </head>
+  <body>
+    <h1 id="contacts">Наши контакты</h1>
 
-  <!-- Ссылка на YouTube канали при клике на изображение -->
-  <a href="https://www.youtube.com/@codeandartmain" target="_blank">
-    <img src="../images/zhongli.webp" alt="">
-  </a>
+    <!-- Ссылка на YouTube канали при клике на изображение -->
+    <a href="https://www.youtube.com/@codeandartmain" target="_blank">
+      <img src="../images/zhongli.webp" alt="" />
+    </a>
 
-  <hr>
+    <hr />
 
-  <ul>
-    <li><a href="tel:+74951234567">+7 (495) 123-45-67</a></li>
-    <li><a href="mailto:example@mail.ru">example@mail.ru</a></li>
-    <li><a href="../images/zhongli.webp" download>Скачать изображение</a></li>
-  </ul>
+    <ul>
+      <li><a href="tel:+74951234567">+7 (495) 123-45-67</a></li>
+      <li><a href="mailto:example@mail.ru">example@mail.ru</a></li>
+      <li><a href="../images/zhongli.webp" download>Скачать изображение</a></li>
+    </ul>
 
-  <hr>
+    <hr />
 
-  <a href="../index.html">Вернуться на главную</a>
+    <a href="../index.html">Вернуться на главную</a>
 
-  <p>lorem2000</p>
+    <p>lorem2000</p>
 
-  <p>
-    <a href="#contacts">В начало страницы</a>
-  </p>
-</body>
+    <p>
+      <a href="#contacts">В начало страницы</a>
+    </p>
+  </body>
 </html>
