--- a/index.html
+++ b/index.html
@@ -2,36 +2,59 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Портфолио web-разработчика" />
-    <meta name="keywords" content="web-разработка, верстка, HTML, CSS" />
-    <title>Основы HTML. Гиперссылки</title>
+    <title>Основы HTML. Таблицы</title>
+
+    <style>
+      table { border-collapse: collapse; }
+      td { padding: 8px; }
+    </style>
+
   </head>
 
   <body>
-
     <!-- Шапка сайта -->
-    <header>
-      <!-- Добавим список для будущего меню сайта -->
-      <ul>
-        <li>
-          <a href="index.html">Главная</a>
-        </li>
-        <li>
-          <a href="pages/about.html">Об авторе</a>
-        </li>
-        <li>
-          <a href="pages/contacts.html">Контакты</a>
-        </li>
-      </ul>
-    </header>
+    <header></header>
 
     <!-- Главная часть сайта -->
     <main>
-      ...
+      <table border="1">
+        <caption>
+          Список видеокарт
+        </caption>
+
+        <!-- Шапка таблицы -->
+        <thead>
+          <tr>
+            <th>№</th>
+            <th>Название</th>
+            <th>Цена</th>
+            <th>Изображение</th>
+          </tr>
+        </thead>
+
+        <!-- Тело таблицы -->
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>RTX 4090</td>
+            <td>$2000</td>
+            <td><img src="images/rtx-4090.webp" alt="" width="100px"></td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>RTX 5090</td>
+            <td>$4000</td>
+            <td><img src="images/rtx-5090.png" alt="" width="100px"></td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <td colspan="3">Итого</td>
+          <td>$6000</td>
+        </tfoot>
+      </table>
     </main>
 
     <!-- Подвал сайта -->
     <footer></footer>
-
   </body>
 </html>
