--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="description" content="Портфолио web-разработчика">
     <meta name="keywords" content="web-разработка, верстка, HTML, CSS">
     <title>Основы HTML. Текст и изображения</title>
+
+    <style>
+      table {border-collapse: collapse;}
+      td { padding: 8px; }
+    </style>
   </head>
 
   <body>
@@ -61,7 +66,44 @@
       <hr>
 
       <h3 id="jobs">Опыт работы</h3>
-      <p><em>Таблица в процессе наполнения</em></p>
+
+      <table border="1">
+        <thead>
+            <tr>
+                <th>№</th>
+                <th>Название</th>
+                <th>Должность</th>
+                <th>Годы</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Иван Иванов</td>
+                <td>WEB-Разработчик. Яндекс</td>
+                <td>2022-2023</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Иван Иванов</td>
+              <td>Тестировщик. Вконтакте</td>
+              <td>2021-2022</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Иван Иванов</td>
+            <td>Ученик. Кванториум</td>
+            <td>2020-2021</td>
+        </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="3">Количество лет опыта работы</td>
+                <td>4</td>
+            </tr>
+        </tfoot>
+      </table>
+
       <hr>
 
       <a href="#main">Вернуться в начало страницы</a>
