--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 
       <h3 id="jobs">Опыт работы</h3>
 
-      <table border="1">
+      <table border="1s">
         <thead>
-            <tr>
-                <th>№</th>
+            <tr> 
+                <th colspan="2">№</th>
                 <th>Название</th>
                 <th>Должность</th>
                 <th>Годы</th>
@@ -78,6 +78,7 @@
         </thead>
         <tbody>
             <tr>
+                <td rowspan="4"><img src="images/zhongli.webp" alt="Image" width="100px"></td>
                 <td>1</td>
                 <td>Иван Иванов</td>
                 <td>WEB-Разработчик. Яндекс</td>
@@ -88,21 +89,21 @@
               <td>Иван Иванов</td>
               <td>Тестировщик. Вконтакте</td>
               <td>2021-2022</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Иван Иванов</td>
-            <td>Ученик. Кванториум</td>
-            <td>2020-2021</td>
-        </tr>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Иван Иванов</td>
+              <td>Ученик. Кванториум</td>
+              <td>2020-2021</td>
+            </tr>
         </tbody>
         <tfoot>
             <tr>
-                <td colspan="3">Количество лет опыта работы</td>
+                <td colspan="4">Количество лет опыта работы</td>
                 <td>4</td>
             </tr>
         </tfoot>
-      </table>
+    </table>
 
       <hr>
 
