--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
     <!-- Главная часть сайта -->
     <main>
-
+      <p style="font-size: 1px; color: red;">
+        - Послушай, ты же верстальщик?<br> - Да.<br> - Наверстай мне упущенное!
+      </p>
     </main>
 
     <!-- Подвал сайта -->
