стили через тег <style>

--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Основы HTML. Таблицы</title>
-  </head>
 
-  <body>
-    <!-- Шапка сайта -->
-    <header></header>
+<head>
+  <meta charset="UTF-8" />
+  <!-- Добавить стили через тег <style> -->
+  <style>
+    p {
+      font-size: 25px;
+      color: red;
+    }
+  </style>
 
-    <!-- Главная часть сайта -->
-    <main>
-      <p style="font-size: 1px; color: red;">
-        - Послушай, ты же верстальщик?<br> - Да.<br> - Наверстай мне упущенное!
-      </p>
-    </main>
+  <title>Основы HTML. Таблицы</title>
+</head>
 
-    <!-- Подвал сайта -->
-    <footer></footer>
-  </body>
+<body>
+  <!-- Шапка сайта -->
+  <header></header>
+  <!-- Главная часть сайта -->
+  <main>
+    <p>- Послушай, ты же верстальщик?<br> - Да.<br> - Наверстай мне упущенное!</p>
+  </main>
+  <!-- Подвал сайта -->
+  <footer></footer>
+</body>
+
 </html>
