Добавить внешний файл стилей

--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- Добавить стили через тег <style> -->
-  <style>
-    p {
-      font-size: 25px;
-      color: red;
-    }
-  </style>
+
+  <!-- Добавить внешний файл стилей -->
+  <link rel="stylesheet" href="styles/style.css">
 
   <title>Основы HTML. Таблицы</title>
 </head>
