Внешний css файл и карточка

--- a/index.html
+++ b/index.html
@@ -7,16 +7,24 @@
   <!-- Добавить внешний файл стилей -->
   <link rel="stylesheet" href="styles/style.css">
 
-  <title>Основы HTML. Таблицы</title>
+  <title>Основы CSS</title>
 </head>
 
 <body>
   <!-- Шапка сайта -->
   <header></header>
   <!-- Главная часть сайта -->
+
   <main>
-    <p>- Послушай, ты же верстальщик?<br> - Да.<br> - Наверстай мне упущенное!</p>
+    <!-- Сделаем карточку №1 -->
+    <div>
+      <img src="images/img1.jpg" alt="Красивое">
+      <h1>Заголовок 1</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor animi, alias accusantium quis a deleniti.</p>
+    </div>
+
   </main>
+
   <!-- Подвал сайта -->
   <footer></footer>
 </body>
