Виды селекторов и каскадность

--- a/index.html
+++ b/index.html
@@ -19,9 +19,18 @@
     <!-- Сделаем карточку №1 -->
     <div>
       <img src="images/img1.jpg" alt="Красивое">
-      <h1>Заголовок 1</h1>
+      <h1 class="blue-color">Заголовок 1</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor animi, alias accusantium quis a deleniti.</p>
     </div>
+
+    <!-- Список для примера про виды селекторов -->
+    <h2 id="list-title">Виды CSS селекторов</h2>
+    <ol>
+      <li>Универсальный селектор</li>
+      <li>Селектор по тегу</li>
+      <li class="big-font-size blue-color">Селектор по классу</li>
+      <li class="blue-color">Селектор по id</li>
+    </ol>
 
   </main>
 
