--- a/index.html
+++ b/index.html
@@ -16,21 +16,40 @@
   <!-- Главная часть сайта -->
 
   <main>
-    <!-- Сделаем карточку №1 -->
-    <div>
-      <img src="images/img1.jpg" alt="Красивое">
-      <h1 class="blue-color">Заголовок 1</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor animi, alias accusantium quis a deleniti.</p>
-    </div>
+    <!-- Форматирование текста -->
+    <p class="text-capitalize">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            
+      <span class="text-uppercase">
+        Impedit consequuntur mollitia dolor repellendus nulla repellat 
+        fuga recusandae dolores iusto laborum?
+      </span>  
+      
+      <span class="text-lowercase">
+        AAAAAAAAAAAAAAAA voluptas amet dolor ex optio sit iste harum voluptatibus 
+        esse libero cupiditate iusto voluptatem sint sapiente quis, beatae dolore 
+        nulla minima incidunt pariatur maiores quod non, dolores vero. Rem!
+      </span>
+    </p>
 
-    <!-- Список для примера про виды селекторов -->
-    <h2 id="list-title">Виды CSS селекторов</h2>
-    <ol>
-      <li>Универсальный селектор</li>
-      <li>Селектор по тегу</li>
-      <li class="big-font-size blue-color">Селектор по классу</li>
-      <li class="blue-color">Селектор по id</li>
-    </ol>
+    <!-- Выравнение текста в блоке -->
+    <div class="text">
+      <p class="text-align-center hex-color">
+        Текст по центру 
+      </p>
+      <p class="text-align-start">
+        Текст в начале
+      </p>
+      <p class="text-align-end">
+        Текст в конце
+      </p>
+      <p class="text-align-justify">
+        Растянутый текст на всю ширину блока. Lorem ipsum, dolor sit amet consectetur 
+        adipisicing elit. Reprehenderit cumque consequuntur magnam, enim et, 
+        repellendus quos eaque corporis nostrum itaque numquam voluptas ea quasi 
+        eius tenetur doloremque recusandae.
+      </p>
+    </div>
 
   </main>
 
